--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Gintas nemoka zaisti</title>
+	<title>Tomas Persona Website</title>
+	<meta name = "viewport" content	 = "width=device-width , initial-scale=1.0">
 	<meta charset="UTF-8">
 </head>
 <body style=background-color:powderblue>
@@ -33,5 +34,5 @@ kito voro teritorijoje
 <img src ="https://i.pinimg.com/736x/37/80/d2/3780d21816198bc96efd7c93b2eae84d.jpg" alt = "pikktas paukstis" width="200" height="150">
 <button>+aura</button>
 
-</body>
+</body><iframe src="https://giphy.com/embed/zT8Ma1z6exPIHppmZa" width="500" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/zT8Ma1z6exPIHppmZa">via GIPHY</a></p>
 </html>
