--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Tomas Persona Website</title>
-	<meta name = "viewport" content	 = "width=device-width , initial-scale=1.0">
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Header Example</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style=background-color:powderblue>
-<h1 style="text-align:center;"title="lbassadakatj">ambasadoriujs</h1>
-	<u1>
-<li style="font-size:50px;font-family:courier;"title="kas skaito tas gaidys">as esu vejas <mark>uzvesk</mark> <br> pelyte ant manes</li>
-<li style="color:Red;">tu esu vejas</li>
-<li style="color:Green;">mes esu vejas</li>
-<pre>
-Ejo karta ejo voras
-
-petras buvo bet nestoras
-
-ir pamate jis didele tvora
-
-kito voro teritorijoje
-<pre>
-<hr>
-	</u1>
-<h2>lbassadakatj</h2>
-<hr>
-<h3>lbassadakatj</h3>
-<hr>
-<h4>lbassadakatj</h4>
-<hr>
-<a  href="https://www.youtube.com/"><b>cia prasau nespausti</b></a>
-<p>mano saraso tema.</p>
-<img class="giphy-gif-img giphy-img-loaded" src="https://shorturl.at/exsMy" style="background:rgba(0,0,0,0)" width="50%" height="50%">
-<img src ="https://i.pinimg.com/736x/37/80/d2/3780d21816198bc96efd7c93b2eae84d.jpg" alt = "pikktas paukstis" width="200" height="150">
-<button>+aura</button>
-
-</body><iframe src="https://giphy.com/embed/zT8Ma1z6exPIHppmZa" width="500" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/zT8Ma1z6exPIHppmZa">via GIPHY</a></p>
+<body>
+    <header id="header">
+        <div class="container">
+            <h1 class="logo">Personal</h1>
+            <nav>
+                <ul class="menu">
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li class="dropdown">
+                        <a href="#">Dropdown</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Option 1</a></li>
+                            <li><a href="#">Option 2</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Joris</h2>
+            <p>Profesorius</p>
+        </div>
+    </section>
+</body>
 </html>
