--- a/Services.html
+++ b/Services.html
@@ -21,7 +21,7 @@
     </header>
     <section class="services-container">
         <h2>Services</h2>
-        <p>I don't provide any services</p>
+        <p>I don't provide any services yet</p>
     </section>
 </body>
 </html>
