--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="jpg/icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script defer src="toggleMode.js"></script>
+    <script defer src="clock.js"></script>
 </head>
 <body>
     <header id="header">
@@ -26,7 +27,8 @@
                 </ul>
             </nav>
             <button id="mode-toggle" class="mode-toggle">Night Mode</button>
-        </div>21
+            <div id="clock" class="clock"></div>
+        </div>
     </header>
     <section class="hero">
         <div class="hero-content">
